--- a/publication.html
+++ b/publication.html
@@ -56,13 +56,13 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
-<li><p>S. K. Jagatheesaperumal, <b>Q.-V. Pham</b>, R. Ruby, Z. Yang, C. Xu, and Z. Zhang, &ldquo;<a href="">Explainable AI over the Internet of Things: Overview, State-of-the-Art and Future Directions</a>,&rdquo; under revision, IEEE Open Journal of the Communications Society.</p>
+<li><p>S. K. Jagatheesaperumal, <b>Q.-V. Pham</b>, R. Ruby, Z. Yang, C. Xu, and Z. Zhang, &ldquo;<a href="">Explainable AI over the Internet of Things: Overview, State-of-the-Art and Future Directions</a>,&rdquo; under revision, <i>IEEE Open Journal of the Communications Society</i>.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, T.-T. Nguyen, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing RIS-Aided Two-Way Full-Duplex Communication with Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">STAR-RIS Enabled Short-Packet NOMA Systems</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
 <li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
@@ -109,7 +109,7 @@
 </li>
 <li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9789336">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>,&rdquo; <i>Proceedings of the IEEE</i>, vol. 110, no. 8, pp. 1073-1115, Aug. 2022.</p>
 </li>
-<li><p>G. Gür, A. Kalla, C. de Alwis, <b>Q.-V. Pham</b>, K.-H. Ngo, M. Liyanage, and P. Porambage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9845700">Integration of ICN and MEC in 5G and Beyond Networks: Mutual Benefits, Use Cases, Challenges, Standardization, and Future Research</a>,&rdquo; IEEE Open Journal of the Communications Society, vol. 3, pp. 1382-1412, Aug. 2022.</p>
+<li><p>G. Gür, A. Kalla, C. de Alwis, <b>Q.-V. Pham</b>, K.-H. Ngo, M. Liyanage, and P. Porambage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9845700">Integration of ICN and MEC in 5G and Beyond Networks: Mutual Benefits, Use Cases, Challenges, Standardization, and Future Research</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, vol. 3, pp. 1382-1412, Aug. 2022.</p>
 </li>
 <li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, S. Pandya, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1389128622001955">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; <i>Computer Networks</i>, vol. 212, pp. 109048, Jul. 2022.</p>
 </li>
@@ -333,7 +333,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-05 13:37:50 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-05 13:49:02 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
