--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Research Professor, Ph.D. <br />
 </li>
 <li><p>Phone: (+82) 010-2158-5224</p>
 </li>
-<li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://publons.com/researcher/1885326/quoc-viet-pham/">Publons</a></p>
+<li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
 </li>
 <li><p>Address: No. 501, ABC Center, Pusan National University, 49, Busandaehak-ro, Mulgeum-eup, Yangsan-si, Gyeongsangnam-do 50612, Korea</p>
 </li>
@@ -101,25 +101,17 @@ Research Professor, Ph.D. <br />
 <ol>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, Q.-V. Pham, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2022.</p>
 </li>
-<li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2204.06760">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2022.</p>
+<li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2022.</p>
 </li>
 <li><p>Q.-V. Pham, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 11, pp. 8339-8363, Jun. 2022.</p>
 </li>
 <li><p>Q.-V. Pham, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 71, no. 5, pp. 4977-4990, May 2022.</p>
 </li>
-<li><p>T. R. Gadekallu, Q.-V. Pham, D. C. Nguyen, P. K. R. Maddikunta, N. Deepa, B. Prabadevi, P. N. Pathirana, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9569742">Blockchain for Edge of Things: Applications, Opportunities, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 2, pp. 964-988, Jan. 2022.</p>
-</li>
 <li><p>L. Nkenyereye, L. Nkenyereye, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555379">Efficient RSU Selection Scheme for Fog-Based Vehicular Software-Defined Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 11, pp. 12126-12141, Nov. 2021.</p>
 </li>
 <li><p>D. C. Nguyen, M. Ding, Q.-V. Pham, P. N. Pathirana, L. B. Le, A. Seneviratne, J. Li, D. Niyato, and H. V. Poor, &ldquo;<a href="https://ieeexplore.ieee.org/document/9403374">Federated Learning Meets Blockchain in Edge Computing: Opportunities and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 8, no. 16, pp. 12806-12825, Aug. 2021.</p>
 </li>
-<li><p>T. Huynh-The, V.-S. Doan, C.-H. Hua, Q.-V. Pham, T.-V. Nguyen, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9416299">Accurate LPI Radar Waveform Recognition with CWD-TFA for Deep Convolutional Network</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 10, no. 8, pp. 1638-1642, Aug. 2021.</p>
-</li>
-<li><p>L. Nkenyereye, J. Y. Hwang, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9360665">MEIX: Evolving Multi-Access Edge Computing for Industrial Internet-of-Things Services</a>,&rdquo; <i>IEEE Network</i>, vol. 35, no. 3, pp. 147-153, May/Jun. 2021.</p>
-</li>
 <li><p>N.-N. Dao, Q.-V. Pham, N. H. Tu, T. T. Thanh, V. N. Q. Bao, D. S. Lakew, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/9358097">Survey on Aerial Radio Access Networks: Toward a Comprehensive 6G Access Infrastructure</a>,&rdquo; <i>IEEE Communications Surveys and Tutorials</i>, vol. 23, no. 2, pp. 1193-1225, Second Quarter 2021.</p>
-</li>
-<li><p>Q.-V. Pham, M. Zeng, R. Ruby, T. Huynh-The, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9374105">UAV Communications for Sustainable Federated Learning</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 4, pp. 3944-3948, Apr. 2021.</p>
 </li>
 <li><p>Q.-V. Pham, F. Fang, V. N. Ha, M. J. Piran, M. Le, L. B. Le, W.-J. Hwang, and Z. Ding, &ldquo;<a href="https://ieeexplore.ieee.org/document/9113305">A Survey of Multi-Access Edge Computing in 5G and Beyond: Fundamentals, Technology Integration, and State-of-the-Art</a>,&rdquo; <i>IEEE Access</i>, vol. 8, pp. 116974-117017, Jun. 2020.</p>
 </li>
@@ -131,11 +123,11 @@ Research Professor, Ph.D. <br />
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me <a href="Misc\Curriculum_Vitae_PHAM.pdf"><font color=red size=+0.5><b>(Curriculum Vitae</a> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5></b>Photo</a>)<b></font></b></font></h2>
-<p>Quoc-Viet Pham (M’18) received the B.S. degree in electronics and telecommunications engineering from the Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Gimhae, Republic of Korea, in 2017. He has been a Research Professor with Pusan National University, Republic of Korea, since Jan. 2020.</p>
-<p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology (Vietnam) in 2021. He is also an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and was a lead guest editor of the IEEE Internet of Things Journal.</p>
+<p>Quoc-Viet Pham (M&rsquo;18) received the B.Sc. degree in electronics and telecommunications engineering from the Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Gimhae, Republic of Korea, in 2017. From Sept. 2017 to Dec. 2020, he was with Kyung Hee University, Inje University, and Changwon National University in various academic positions. He has been a Research Professor with Pusan National University, Republic of Korea, since Jan. 2020.</p>
+<p>He specializes in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology (Vietnam) in 2021. He is also an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and was a lead guest editor of the IEEE Internet of Things Journal.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-30 15:15:05 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-08 10:33:37 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
