--- a/publication.html
+++ b/publication.html
@@ -45,9 +45,9 @@
 </li>
 <li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &ldquo;<a href="">Resource Allocation for IRS-Empowered Wireless Communications</a>,&rdquo; in <i>6G Wireless: The Communication Paradigm Beyond 2030</i>, CRC Press, 2022.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET, 2022.</p>
+<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="https://digital-library.theiet.org/content/books/10.1049/pbte104e_ch5">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET Digital Library, 2022.</p>
 </li>
-<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET, 2022.</p>
+<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="https://digital-library.theiet.org/content/books/10.1049/pbte104e_ch7">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; in <i>Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions</i>, IET Digital Library, 2022.</p>
 </li>
 <li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7"><i>Fog/Edge Computing For Security, Privacy, and Applications</i></a>, Springer, 2021.</p>
 </li>
@@ -74,7 +74,7 @@
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>,&rdquo; under review, <i>IEEE Transactions on Communications</i>.</p>
 </li>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing Hybrid Long- and Short-Packet Based NOMA Systems via Joint Power Allocation and Beamforming Design</a>,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Hybrid Long- and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under revision, <i>Engineering Applications of Artificial Intelligence</i>.</p>
 </li>
@@ -95,9 +95,9 @@
 </li>
 <li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9854848">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
-<li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2204.06760">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
+<li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
-<li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2106.09261">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press.</p>
+<li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press.</p>
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
 </li>
@@ -111,7 +111,7 @@
 </li>
 <li><p>G. Gür, A. Kalla, C. de Alwis, <b>Q.-V. Pham</b>, K.-H. Ngo, M. Liyanage, and P. Porambage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9845700">Integration of ICN and MEC in 5G and Beyond Networks: Mutual Benefits, Use Cases, Challenges, Standardization, and Future Research</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, vol. 3, pp. 1382-1412, Aug. 2022.</p>
 </li>
-<li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, S. Pandya, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1389128622001955">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; <i>Computer Networks</i>, vol. 212, pp. 109048, Jul. 2022.</p>
+<li><p>P. Boopalan, S. P. Ramu, <b>Q.-V. Pham</b>, K. Dev, S. Pandya, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1389128622001955">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; <i>Computer Networks</i>, vol. 212, pp. 109048, Jul. 2022.</p>
 </li>
 <li><p>M. Liyanage, <b>Q.-V. Pham</b>, K. Dev, S. Bhattacharya, P. K. R. Maddikunta, T. R. Gadekallu, and G. Yenduri, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804522000297">A Survey on Zero Touch Network and Service Management (ZSM) for 5G and Beyond Networks</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 203, pp. 103362, Jul. 2022.</p>
 </li>
@@ -133,13 +133,13 @@
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9768809">RF-UAVNet: High-Performance Convolutional Network for RF-based Drone Surveillance Systems</a>,&rdquo; <i>IEEE Access</i>, vol. 10, pp. 49696-49707, May 2022. [<a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL">MATLAB Code</a>]</p>
 </li>
-<li><p>M. Alazab, R. M. Swarna Priya, M. Parimala, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, vol. 18, no. 5, pp. 3501-3509, May 2022.</p>
+<li><p>M. Alazab, S. P. Ramu, P. Boopalan, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, vol. 18, no. 5, pp. 3501-3509, May 2022.</p>
 </li>
 <li><p>H. Yang, R. Ruby, <b>Q.-V. Pham</b>, and K. Wu, &ldquo;<a href="https://ieeexplore.ieee.org/document/9525446">Aiding a Disaster Spot via Multi-UAV-based IoT Networks: Energy and Mission Completion Time-Aware Trajectory Optimization</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 8, pp. 5853-5867, Apr. 2022. </p>
 </li>
 <li><p>R. Ruby, <b>Q.-V. Pham</b>, K. Wu, A. A. Heidari, H. Chen, and B. M. ElHalawany, &ldquo;<a href="https://ieeexplore.ieee.org/document/9528850">Enhancing Secrecy Performance of Cooperative NOMA-based IoT Networks via Multi-Antenna Aided Artificial Noise</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 7, pp. 5108-5127, Apr. 2022.</p>
 </li>
-<li><p>R. M. Swarna Priya, M. Parimala, <b>Q.-V. Pham</b>, P. K. R. Maddikunta, T. Huynh-The, M. Alazab, T. T. Nguyen, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2210670721009264">Federated learning enabled digital twins for smart cities: Concepts, recent advances, and future directions</a>,&rdquo; <i>Sustainable Cities and Society</i>, vol. 79, pp. 103663, Apr. 2022.</p>
+<li><p>S. P. Ramu, P. Boopalan, <b>Q.-V. Pham</b>, P. K. R. Maddikunta, T. Huynh-The, M. Alazab, T. T. Nguyen, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2210670721009264">Federated learning enabled digital twins for smart cities: Concepts, recent advances, and future directions</a>,&rdquo; <i>Sustainable Cities and Society</i>, vol. 79, pp. 103663, Apr. 2022.</p>
 </li>
 <li><p>D. C. Nguyen, <b>Q.-V. Pham</b>, P. N. Pathirana, M. Ding, A. Seneviratne, J. Lin, O. A. Dobre, and W.-J. Hwang, &ldquo;<a href="https://dl.acm.org/doi/10.1145/3501296">Federated Learning for Smart Healthcare: A Survey</a>,&rdquo; <i>ACM Computing Surveys</i>, vol. 55, no. 3, pp. 1-37, Apr. 2022.</p>
 </li>
@@ -273,6 +273,8 @@
 <p><div id="Conferences"></p>
 <h2>Conferences</h2>
 <ol>
+<li><p>M.-D. Nguyen, X.-T. Nguyen, H.-S. Luong, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="">FFD: A Full-Stack Federated Distillation method for Heterogeneous Massive IoT Networks</a>,&rdquo; in <i>IEEE International Conference on Advanced Technology for Communications (ATC)</i>, Hanoi, Vietnam, Oct. 2022.</p>
+</li>
 <li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, M. Le, and W.-J. Hwang, &ldquo;<a href="">Semantic Graph Multi-agent Reinforcement Learning</a>,&rdquo; in <i>International Conference on Multimedia Information Technology and Applications (MITA)</i>, Jeju Island, Korea, Jul. 2022.</p>
 </li>
 <li><p>S.-M. Lee, <b>Q.-V. Pham</b>, M.-D. Nguyen, and W.-J. Hwang, &ldquo;<a href="">Model Parameter Compression Scheme using Dimension Reduction in Federated Learning</a>,&rdquo; in <i>International Conference on Multimedia Information Technology and Applications (MITA)</i>, Jeju Island, Korea, Jul. 2022.</p>
@@ -333,7 +335,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-05 13:49:02 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-13 10:44:27 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
