--- a/publication.html
+++ b/publication.html
@@ -93,7 +93,7 @@
 <ol>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, K.-H. Kwon, and D.-S. Kim, &ldquo;<a href="">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; <i>IEEE Systems Journals</i>, in press. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
 </li>
-<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9854848">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>, in press.</p>
+<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9854848">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
@@ -125,7 +125,7 @@
 </li>
 <li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, B. Prabadevi, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://authors.elsevier.com/sd/article/S0167-739X(22)00024-3">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 131, pp. 209-226, Jun. 2022.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, vol. 36, no. 3, pp. 159-166, May/Jun. 2022.</p>
+<li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829367">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, vol. 36, no. 3, pp. 159-166, May/Jun. 2022.</p>
 </li>
 <li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829312">IIFNet: A Fusion based Intelligent Service for Noisy Preamble Detection in 6G</a>,&rdquo; <i>IEEE Network</i>, vol. 36, no. 3, pp. 48-54, May/Jun. 2022.</p>
 </li>
@@ -281,7 +281,7 @@
 </li>
 <li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/9838414">UAV-enabled Wireless Powered Communication for Energy-Efficient Federated Learning</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May 2022.  </p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RaComNet: High-Performance Deep Network for Waveform Recognition in Coexistence Radar-Communication Systems</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May 2022.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9882292">RaComNet: High-Performance Deep Network for Waveform Recognition in Coexistence Radar-Communication Systems</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May 2022.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9771946">Automatic Modulation Classification with Low-Cost Attention Network for Impaired OFDM Signals</a>,&rdquo; in <i>IEEE Wireless Communications and Networking Conference (WCNC)</i>, Austin, TX, USA, Apr. 2022.</p>
 </li>
@@ -335,7 +335,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-13 10:44:27 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-27 10:10:51 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
