--- a/publication.html
+++ b/publication.html
@@ -56,6 +56,8 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; submitted, ICLR 2023.</p>
+</li>
 <li><p>S. K. Jagatheesaperumal, <b>Q.-V. Pham</b>, R. Ruby, Z. Yang, C. Xu, and Z. Zhang, &ldquo;<a href="">Explainable AI over the Internet of Things: Overview, State-of-the-Art and Future Directions</a>,&rdquo; under revision, <i>IEEE Open Journal of the Communications Society</i>.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, T.-T. Nguyen, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing RIS-Aided Two-Way Full-Duplex Communication with Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
@@ -91,7 +93,7 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
-<li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, K.-H. Kwon, and D.-S. Kim, &ldquo;<a href="">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; <i>IEEE Systems Journals</i>, in press. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
+<li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, K.-H. Kwon, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9908294">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; <i>IEEE Systems Journals</i>, in press. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
 </li>
 <li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9854848">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
@@ -335,7 +337,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-02 10:30:09 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-06 09:48:05 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
