--- a/grantaward.html
+++ b/grantaward.html
@@ -64,6 +64,8 @@ Pusan National University</p>
 <p><div id="Awards"></p>
 <h2>Awards</h2>
 <ul>
+<li><p>World's top 2% of scientists on Stanford University list, 2021-2022.</p>
+</li>
 <li><p>Golden globe award 2021 from the Ministry of Science and Technology (Vietnam), 2021.</p>
 </li>
 <li><p>Award for outstanding contributions and research excellence from Minister of Education (Korea), 2021.</p>
@@ -79,7 +81,7 @@ Pusan National University</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-07 12:10:02 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-19 10:10:56 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
