--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Research Professor, Ph.D. <br />
 <ul>
 <li><p><b>Edge Computing</b>: resource optimization, aerial computing, edge of things, and edge AI.</p>
 </li>
-<li><p><b>Future Networks</b>: 6G, Internet of Things, intelligent surfaces, and blockchain. </p>
+<li><p><b>Future Networks</b>: 6G, Internet of Things, intelligent surfaces, metaverse, and blockchain. </p>
 </li>
 <li><p><b>Wireless AI</b>: communication-efficient federated learning, sustainable AI, and secure learning.</p>
 </li>
@@ -64,6 +64,8 @@ Research Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[10/2022] Many congratulations to Minh Duong for winning a best paper award from IEEE ATC 2022 for his work on Full-Stack Federated Distillation for Massive IoT. </p>
+</li>
 <li><p>[10/2022] I am chairing <a href="https://atc-conf.org/special-sessions/special-session-on-machine-learning-for-future-networks-and-iot-systems">a special session on machine learning for future networks</a>. Please visit Hanoi and attend our special session. </p>
 </li>
 <li><p>[09/2022] Congratulations to Dr. Thien for his work on <a href="https://ieeexplore.ieee.org/document/9908294">DL-enabled modulation classification in OFDM wireless systems</a> being accepted to IEEE Systems Journal.   </p>
@@ -129,7 +131,7 @@ Research Professor, Ph.D. <br />
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology (Vietnam) in 2021. He is also an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and was a lead guest editor of the IEEE Internet of Things Journal.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-07 10:40:52 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-21 09:46:58 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
