--- a/publication.html
+++ b/publication.html
@@ -74,9 +74,9 @@
 </li>
 <li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under revision, <i>IEEE Transactions on Communications</i>.</p>
 </li>
-<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, D. V. Le, and V. J. Reddi, &ldquo;<a href="https://www.researchgate.net/publication/360541504_Improving_Performance_of_Deep_Reinforcement_Learning_by_Incorporating_Human_Expertise">Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
+<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, D. V. Le, and V. J. Reddi, &ldquo;<a href="https://www.researchgate.net/publication/360541504_Improving_Performance_of_Deep_Reinforcement_Learning_by_Incorporating_Human_Expertise">Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise</a>,&rdquo; submitted, <i>International Conference on Autonomous Agents and Multiagent Systems (AAMAS)</i>, 2023.</p>
 </li>
-<li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>,&rdquo; under review, <i>IEEE Transactions on Communications</i>.</p>
+<li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">Adaptive mm-Waveform for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Hybrid Long- and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
@@ -341,7 +341,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-19 10:10:50 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-21 09:51:48 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
