--- a/publication.html
+++ b/publication.html
@@ -78,8 +78,6 @@
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">Adaptive mm-Waveform for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under revision, <i>Engineering Applications of Artificial Intelligence</i>.</p>
-</li>
 <li><p>T. R. Gadekallu, T. Huynh-The, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2203.09738">Blockchain for the Metaverse: A Review</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; under revision, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
@@ -94,6 +92,8 @@
 <h2>2022 and In Press</h2>
 <ol>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Hybrid Long-and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+</li>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; <i>Engineering Applications of Artificial Intelligence</i>, in press.</p>
 </li>
 <li><p>S. K. Jagatheesaperumal, <b>Q.-V. Pham</b>, R. Ruby, Z. Yang, C. Xu, and Z. Zhang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9930971">Explainable AI over the Internet of Things (IoT): Overview, State-of-the-Art and Future Directions</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, in press.</p>
 </li>
@@ -341,7 +341,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-05 14:37:47 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-11-05 14:43:54 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
