--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Research Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>[11/2022] Congratulations to Hoc Vu for his work on hybrid long-and short-packet NOMA being accepted to IEEE Transactions on Vehicular Technology. </p>
+<li><p>[11/2022] Congratulations to Hoc Vu for his work on <a href="https://ieeexplore.ieee.org/document/9942348">hybrid long-and short-packet NOMA</a> being accepted to IEEE Transactions on Vehicular Technology. </p>
 </li>
 <li><p>[10/2022] Many congratulations to Minh Duong for winning a best paper award from IEEE ATC 2022 for his work on Full-Stack Federated Distillation for Massive IoT. </p>
 </li>
@@ -128,12 +128,12 @@ Research Professor, Ph.D. <br />
 </ol>
 <p></div></p>
 <p><div id="About Me"></p>
-<h2>About Me <a href="Misc\Curriculum_Vitae_PHAM.pdf"><font color=red size=+0.5><b>(Curriculum Vitae</a> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5></b>Photo</a>)<b></font></b></font></h2>
-<p>Quoc-Viet Pham (M&rsquo;18) received the B.Sc. degree in electronics and telecommunications engineering from the Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Gimhae, Republic of Korea, in 2017. From Sept. 2017 to Dec. 2020, he was with Kyung Hee University, Inje University, and Changwon National University in various academic positions. He has been a Research Professor with Pusan National University, Republic of Korea, since Jan. 2020.</p>
+<h2>About Me <a href="Misc\Curriculum_Vitae_PHAM.pdf"><font color=blue size=+0.5>(<b>CV</a> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=blue size=+0.5></b>CV of Failure</a><b></font></b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=blue size=+0.5><b>Photo</a>)</b></font></font></h2>
+<p>Quoc-Viet Pham (M&rsquo;18) received the B.Sc. degree in electronics and telecommunications engineering from Hanoi University of Science and Technology, Vietnam, in 2013 and the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. From 2017 to 2022, he was in various academic positions with Kyung Hee University, Inje University, Changwon National University, and Pusan National University. Since Jan. 2023, he has been with the School of Computer Science and Statistics, Trinity College Dublin as an assistant professor in Networks and Distributed Systems.</p>
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology (Vietnam) in 2021. He is also an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and was a lead guest editor of the IEEE Internet of Things Journal.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-05 14:40:55 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-11-17 16:23:54 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
