--- a/publication.html
+++ b/publication.html
@@ -91,11 +91,9 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Hybrid Long-and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9942348">Hybrid Long-and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; <i>Engineering Applications of Artificial Intelligence</i>, in press.</p>
-</li>
-<li><p>S. K. Jagatheesaperumal, <b>Q.-V. Pham</b>, R. Ruby, Z. Yang, C. Xu, and Z. Zhang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9930971">Explainable AI over the Internet of Things (IoT): Overview, State-of-the-Art and Future Directions</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, K.-H. Kwon, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9908294">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; <i>IEEE Systems Journals</i>, in press. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
 </li>
@@ -106,6 +104,8 @@
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press.</p>
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
+</li>
+<li><p>S. K. Jagatheesaperumal, <b>Q.-V. Pham</b>, R. Ruby, Z. Yang, C. Xu, and Z. Zhang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9930971">Explainable AI over the Internet of Things (IoT): Overview, State-of-the-Art and Future Directions</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, vol. 3, pp. 2106-2136, Nov. 2022.</p>
 </li>
 <li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, O. Aouedi, G. Yenduri, S. Bhattacharya, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1084804522001138">Incentive techniques for the Internet of Things: A survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 206, pp. 103464, Oct. 2022.</p>
 </li>
@@ -279,7 +279,7 @@
 <p><div id="Conferences"></p>
 <h2>Conferences</h2>
 <ol>
-<li><p>M.-D. Nguyen, X.-T. Nguyen, H.-S. Luong, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="">FFD: A Full-Stack Federated Distillation method for Heterogeneous Massive IoT Networks</a>,&rdquo; in <i>IEEE International Conference on Advanced Technology for Communications (ATC)</i>, Hanoi, Vietnam, Oct. 2022.</p>
+<li><p>M.-D. Nguyen, X.-T. Nguyen, H.-S. Luong, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9943034/">FFD: A Full-Stack Federated Distillation method for Heterogeneous Massive IoT Networks</a>,&rdquo; in <i>IEEE International Conference on Advanced Technology for Communications (ATC)</i>, Hanoi, Vietnam, Oct. 2022.</p>
 </li>
 <li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, M. Le, and W.-J. Hwang, &ldquo;<a href="">Semantic Graph Multi-agent Reinforcement Learning</a>,&rdquo; in <i>International Conference on Multimedia Information Technology and Applications (MITA)</i>, Jeju Island, Korea, Jul. 2022.</p>
 </li>
@@ -341,7 +341,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-05 14:43:54 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-11-17 16:24:39 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
