--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Research Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>[11/2022] Congratulations to Hoc Vu for his work on <a href="https://ieeexplore.ieee.org/document/9942348">hybrid long-and short-packet NOMA</a> being accepted to IEEE Transactions on Vehicular Technology. </p>
+<li><p>[11/2022] Congratulations to Hoc Vu for his works on short-packet NOMA being accepted to IEEE TVT and IEEE TCCN. </p>
 </li>
 <li><p>[10/2022] Many congratulations to Minh Duong for winning a best paper award from IEEE ATC 2022 for his work on Full-Stack Federated Distillation for Massive IoT. </p>
 </li>
@@ -133,7 +133,7 @@ Research Professor, Ph.D. <br />
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology (Vietnam) in 2021. He is also an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and was a lead guest editor of the IEEE Internet of Things Journal.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-17 16:26:58 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-11-24 09:35:57 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
