--- a/publication.html
+++ b/publication.html
@@ -80,8 +80,6 @@
 </li>
 <li><p>T. R. Gadekallu, T. Huynh-The, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2203.09738">Blockchain for the Metaverse: A Review</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
 </li>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; under revision, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
-</li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under review, <i>Engineering Applications of Artificial Intelligence</i>.</p>
 </li>
 <li><p>M. Alazab, R. Vinayakumar, S. Srinivasan, <b>Q.-V. Pham</b>, S. Venkatraman, Soman KP, and K. Simran, &ldquo;<a href="https://www.techrxiv.org/articles/preprint/Deep_Learning_for_Cyber_Security_Applications_A_Comprehensive_Survey/16748161/1">Deep Learning for Cyber Security Applications: A Comprehensive Survey</a>,&rdquo; under revision, <i>IEEE Communications Surveys and Tutorials</i>.</p>
@@ -89,11 +87,11 @@
 </ol>
 <p></div></p>
 <p><div id="2022 and In Press"></p>
-<h2>2022 and In Press</h2>
+<h2>2023 and In Press</h2>
 <ol>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9942348">Hybrid Long-and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, in press.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; <i>Engineering Applications of Artificial Intelligence</i>, in press.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9942348">Hybrid Long-and Short-Packet Based NOMA Systems with Joint Power Allocation and Beamforming Design</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, K.-H. Kwon, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9908294">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; <i>IEEE Systems Journals</i>, in press. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
 </li>
@@ -105,6 +103,13 @@
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
 </li>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; <i>Engineering Applications of Artificial Intelligence</i>, vol. 117, pp. 105581, Jan. 2023.</p>
+</li>
+</ol>
+<p></div></p>
+<p><div id="2022"></p>
+<h2>2022</h2>
+<ol>
 <li><p>S. K. Jagatheesaperumal, <b>Q.-V. Pham</b>, R. Ruby, Z. Yang, C. Xu, and Z. Zhang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9930971">Explainable AI over the Internet of Things (IoT): Overview, State-of-the-Art and Future Directions</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, vol. 3, pp. 2106-2136, Nov. 2022.</p>
 </li>
 <li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, O. Aouedi, G. Yenduri, S. Bhattacharya, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1084804522001138">Incentive techniques for the Internet of Things: A survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 206, pp. 103464, Oct. 2022.</p>
@@ -341,7 +346,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-17 16:24:39 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-11-24 09:29:57 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
