--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="210px" />&nbsp;</td>
-<td align="left"><p><a href="mailto:vietpq@pusan.ac.kr">Quoc-Viet PHAM</a> <br />
+<td align="left"><p><a href="mailto:phamq@tcd.ie">Quoc-Viet PHAM</a> <br />
 Research Professor, Ph.D. <br /> 
 <a href="www.pusan.ac.kr/eng">Pusan National University</a></p>
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
-<li><p>E-mail: <a href="mailto:vietpq@pusan.ac.kr">vietpq@pusan.ac.kr</a> / <a href="mailto:vietpq90@gmail.com">vietpq90@gmail.com</a></p>
+<li><p>E-mail: <a href="mailto:phamq@tcd.ie">phamq@tcd.ie</a> / <a href="mailto:vietpq90@gmail.com">vietpq90@gmail.com</a></p>
 </li>
 <li><p>Phone: (+82) 010-2158-5224</p>
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
 </li>
-<li><p>Address: No. 501, ABC Center, Pusan National University, 49, Busandaehak-ro, Mulgeum-eup, Yangsan-si, Gyeongsangnam-do 50612, Korea</p>
+<li><p>Address: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, Trinity College Dublin, Dublin 2, Ireland</p>
 </li>
 </ul>
 </td></tr></table>
@@ -64,6 +64,8 @@ Research Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[01/2023] New academic chapter! I have been with the School of Computer Science and Statistics, Trinity College Dublin, from Jan. 2023. </p>
+</li>  
 <li><p>[11/2022] Congratulations to Hoc Vu for his works on short-packet NOMA being accepted to IEEE TVT and IEEE TCCN. </p>
 </li>
 <li><p>[10/2022] Many congratulations to Minh Duong for winning a best paper award from IEEE ATC 2022 for his work on Full-Stack Federated Distillation for Massive IoT. </p>
@@ -129,8 +131,8 @@ Research Professor, Ph.D. <br />
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me <a href="Misc\Curriculum_Vitae_PHAM.pdf"><font color=red size=+0.5>(<b>CV</a> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5></b>CV of Failure</a><b></font></b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5><b>Photo</a>)</b></font></font></h2>
-<p>Quoc-Viet Pham (M&rsquo;18) received the B.Sc. degree in electronics and telecommunications engineering from Hanoi University of Science and Technology, Vietnam, in 2013 and the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. From 2017 to 2022, he was in various academic positions with Kyung Hee University, Inje University, Changwon National University, and Pusan National University. Since Jan. 2023, he has been with the School of Computer Science and Statistics, Trinity College Dublin as an assistant professor in Networks and Distributed Systems.</p>
-<p>He specializes in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology (Vietnam) in 2021. He is also an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and was a lead guest editor of the IEEE Internet of Things Journal.</p>
+<p>Quoc-Viet Pham (M&rsquo;18) received the B.Sc. degree in electronics and telecommunications engineering from Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. From 2017 to 2022, he was in various academic positions with Kyung Hee University, Inje University, Changwon National University, and Pusan National University. Since Jan. 2023, he has been an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin. He is also serving as an ADVANCE CRT supervisor, and an Associate Investigator at the CONNECT centre.</p>
+<p>He specializes in applying convex optimization, game theory, and machine learning to analyze and optimize cloud edge computing and future wireless systems. Specifically, his research focuses on three main thrusts, including edge intelligence, wireless for AI, and AI for wireless. He has been granted the Korea NRF Funding for outstanding young researchers from the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021. He is also an Editor of Journal of Network and Computer Applications (Elsevier) and Scientific Reports (Nature) and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications (Elsevier).</p>
 <div id="footer">
 <div id="footer-text">
 Page generated 2022-11-24 09:35:57 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
