--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 <table class="imgtable"><tr><td>
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="210px" />&nbsp;</td>
 <td align="left"><p><a href="mailto:phamq@tcd.ie">Quoc-Viet PHAM</a> <br />
-Research Professor, Ph.D. <br /> 
-<a href="www.pusan.ac.kr/eng">Pusan National University</a></p>
+Assistant Professor, Ph.D. <br /> 
+<a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></p>
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
 <li><p>E-mail: <a href="mailto:phamq@tcd.ie">phamq@tcd.ie</a> / <a href="mailto:vietpq90@gmail.com">vietpq90@gmail.com</a></p>
 </li>
-<li><p>Phone: (+82) 010-2158-5224</p>
+<li><p>Phone: (+383) 083 475 5354</p>
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
 </li>
@@ -64,7 +64,7 @@ Research Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>[01/2023] New academic chapter! I have been with the School of Computer Science and Statistics, Trinity College Dublin, from Jan. 2023. </p>
+<li><p>[01/2023] New academic chapter! I am currently with the School of Computer Science and Statistics, Trinity College Dublin. </p>
 </li>  
 <li><p>[11/2022] Congratulations to Hoc Vu for his works on short-packet NOMA being accepted to IEEE TVT and IEEE TCCN. </p>
 </li>
