--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="210px" />&nbsp;</td>
 <td align="left"><p><a href="mailto:phamq@tcd.ie">Quoc-Viet PHAM</a> <br />
 Assistant Professor, Ph.D. <br /> 
-<a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></p>
+<a href="https://www.tcd.ie/">Trinity College Dublin</a></p>
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
