--- a/eduwork.html
+++ b/eduwork.html
@@ -28,6 +28,23 @@
 <div id="toptitle">
 <h1>Education and Work</h1>
 </div>
+<p><div id="Academic Experience"></p>
+<h2>Academic Experience</h2>
+<ul>
+<li><p>*Jan. 2023 - Present: Assistant Professor, School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland</p>
+</li>
+<li><p>Jan. 2020 - Present: Research Professor, Pusan National University, South Korea</p>
+</li>
+<li><p>Mar. 2018 - Dec. 2019: Research Professor, Changwon National University / Inje University, South Korea</p>
+</li>
+<li><p>Sep. 2017 - Feb. 2018: Postdoctoral Researcher, Kyung Hee University, South Korea</p>
+</li>
+<li><p>Sep. 2013 - Aug. 2017: Research Assistant, Inje University, South Korea</p>
+</li>
+<li><p>Feb. 2012 - Aug. 2013: Research Assistant, Hanoi University of Science and Technology, Vietnam</p>
+</li>
+</ul>
+<p></div></p>
 <p><div id="Education"></p>
 <h2>Education</h2>
 <ul>
@@ -41,21 +58,6 @@
 </li>
 </ul>
 <p></div></p>
-<p><div id="Academic Experience"></p>
-<h2>Academic Experience</h2>
-<ul>
-<li><p>Jan. 2020 - Present: Research Professor, Pusan National University, South Korea</p>
-</li>
-<li><p>Mar. 2018 - Dec. 2019: Research Professor, ICT Convergence Center, Changwon National University / Inje University, South Korea</p>
-</li>
-<li><p>Sep. 2017 - Feb. 2018: Postdoctoral Researcher, Kyung Hee University, South Korea</p>
-</li>
-<li><p>Sep. 2013 - Aug. 2017: Research Assistant, Inje University, South Korea</p>
-</li>
-<li><p>Feb. 2012 - Aug. 2013: Research Assistant, Hanoi University of Science and Technology, Vietnam</p>
-</li>
-</ul>
-<p></div></p>
 <p><div id="Visiting Experience"></p>
 <h2>Visiting Experience</h2>
 <ul>
@@ -66,7 +68,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-30 15:16:49 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-07 12:08:56 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
